added sound effect

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="button-container">
         <button type="reset" class="reset-button">Reset</button>
     </div>
+    <audio id="winnerSound" src="assets/winner.mp3" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 
