--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="cell" id="cell-8"></div>
         </div>
         <div class="status-message">
-            <h3>Status Messages</h3>
+            <h3>Game Status</h3>
             <div id="messages"></div>
         </div>
     </div>
