--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div id="container">
         <div class="player-container">
             <h3>Player Info</h3>
-            <div class="scorecard">
-                <div id="player1score">Player 1 Score: 0</div>
-                <div id="player2score">Player 2 Score: 0</div>
-            </div>
             <div id="player-info"></div>
+            <div class="scorecard">
+                <div id="player1score">P1 Score: 0</div>
+                <div id="player2score">P2 Score: 0</div>
+            </div>
         </div>
         <div id="gameboard">
             <div class="cell" id="cell-0"></div>
